# openclaw-gitrepo-agent

./: .env.example  .gitignore  AGENTS.md  CAPABILITIES.md  CLAUDE.md  Dockerfile  HEARTBEAT.md  IDENTITY.md  README.md  SOUL.md  TOOLS.md  docker-compose.yml  mix.exs
.archgate/: README.md
.archgate/adrs/: ARCH-001-elixir-module-structure.md  ARCH-002-zero-install-containers.md  ARCH-003-pr-scoring-system.md  ARCH-004-pipeline-runner-python.md  ARCH-005-secrets-never-in-git.md  ARCH-006-progressive-disclosure.md  ARCH-007-multi-vcs-support.md  ARCH-008-iamq-integration.md
.github/workflows/: ci.yml  pr-review.yml
config/: repos.example.json
input/: TASK.md
lib/gitrepo_agent/: application.ex  mq_client.ex  notification.ex  pr_evaluator.ex  repo_manager.ex  report_generator.ex  scoring.ex  stats_collector.ex  task_processor.ex
spec/: ARCHITECTURE.md  COMMUNICATION.md  LEARNINGS.md  PIPELINES.md  SAFETY.md  SCORING.md  TROUBLESHOOTING.md  WORKFLOW.md
tools/pipeline_runner/: Dockerfile  README.md  pyproject.toml
tools/pipeline_runner/pipeline_runner/: __init__.py  __main__.py
tools/pipeline_runner/pipeline_runner/reporters/: __init__.py  markdown.py  telegram.py
tools/pipeline_runner/pipeline_runner/steps/: __init__.py  adr_check.py  architecture.py  pr_review.py  quality.py  security.py
tools/pipeline_runner/pipeline_runner/vcs/: __init__.py  ado.py  github.py
